photosession before the gallery hover

--- a/fotosessions.html
+++ b/fotosessions.html
@@ -39,48 +39,64 @@
   	</div>
   </header>
 
-  <section id="fotosessions">
+  <section id="photosessions">
   <div class="container">
       <div class="wrapper">
-        <h3>Оксана и Андрей</h3>
-        <p>21.01.2017</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
+        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
+        <p class="date-time">21.01.2017</p>
         <div class="row">
+          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
+        </div>
+        <div class="row row-padding-0">
+
           <div class="image-wrapper col-md-3">
-      <a href="#openModal1" class="open-photo"><img src="img/sw1.jpg" class="min-img"></a>
-      <div id="openModal1" class="modalDialog">
-        <div class="max-img-wrapper">
-          <img src="img/sw1.jpg" class="max-img">
-        </div>
-        <span class="control-arrows left-arrow">left</span>
-        <span class="control-arrows right-arrow">right</span>
+            <a href="#openModal1" class="open-photo"><img src="img/sw1.jpg" class="min-img"></a>
+            <div id="openModal1" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw1.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
 
-      </div>
-    </div>
+            </div>
+          </div>
 
-    <div class="image-wrapper col-md-3">
-      <a href="#openModal2" class="open-photo"><img src="img/sw2.jpg" class="min-img"></a>
+          <div class="image-wrapper col-md-3">
+            <a href="#openModal2" class="open-photo"><img src="img/sw2.jpg" class="min-img"></a>
 
-      <div id="openModal2" class="modalDialog">
-          <div class="max-img-wrapper">
-          <img src="img/sw2.jpg" class=" max-img">
-        </div>
-        <span class="control-arrows left-arrow">left</span>
-        <span class="control-arrows right-arrow">right</span>
-      </div>
-    </div>
+            <div id="openModal2" class="modalDialog">
+                <div class="max-img-wrapper">
+                <img src="img/sw2.jpg" class=" max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+          </div>
 
-    <div class="image-wrapper col-md-3">
-      <a href="#openModal3 " class="open-photo"><img src="img/sw3.jpg" class="min-img"></a>
+          <div class="image-wrapper col-md-3">
+            <a href="#openModal3 " class="open-photo"><img src="img/sw3.jpg" class="min-img"></a>
 
-      <div id="openModal3" class="modalDialog">
-        <div class="max-img-wrapper">
-          <img src="img/sw3.jpg" class=" max-img">
-        </div>
-        <span class="control-arrows left-arrow">left</span>
-        <span class="control-arrows right-arrow">right</span>
-      </div>
-    </div>
+            <div id="openModal3" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw3.jpg" class=" max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+          </div>
+
+          <div class="image-wrapper col-md-3">
+            <a href="#openModal4 " class="open-photo"><img src="img/sw4.jpg" class="min-img"></a>
+
+            <div id="openModal4" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw4.jpg" class=" max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
