--- a/fotosessions.html
+++ b/fotosessions.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <!-- animate -->
@@ -41,64 +43,433 @@
 
   <section id="photosessions">
   <div class="container">
-      <div class="wrapper">
+
+    <!-- Одна фотосессия -->
+      <div class="photosession-preview-wrapper">
         <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
         <p class="date-time">21.01.2017</p>
         <div class="row">
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
 
-          <div class="image-wrapper col-md-3">
-            <a href="#openModal1" class="open-photo"><img src="img/sw1.jpg" class="min-img"></a>
+            <div class="min-img-wrapper open-photo" data-target="openModal1">
+              <img src="img/sw1.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
             <div id="openModal1" class="modalDialog">
               <div class="max-img-wrapper">
                 <img src="img/sw1.jpg" class="max-img">
               </div>
               <span class="control-arrows left-arrow">left</span>
               <span class="control-arrows right-arrow">right</span>
-
             </div>
-          </div>
 
-          <div class="image-wrapper col-md-3">
-            <a href="#openModal2" class="open-photo"><img src="img/sw2.jpg" class="min-img"></a>
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+           <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal2">
+              <img src="img/sw2.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
 
             <div id="openModal2" class="modalDialog">
-                <div class="max-img-wrapper">
-                <img src="img/sw2.jpg" class=" max-img">
+              <div class="max-img-wrapper">
+                <img src="img/sw2.jpg" class="max-img">
               </div>
               <span class="control-arrows left-arrow">left</span>
               <span class="control-arrows right-arrow">right</span>
             </div>
-          </div>
 
-          <div class="image-wrapper col-md-3">
-            <a href="#openModal3 " class="open-photo"><img src="img/sw3.jpg" class="min-img"></a>
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal3">
+              <img src="img/sw3.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
 
             <div id="openModal3" class="modalDialog">
               <div class="max-img-wrapper">
-                <img src="img/sw3.jpg" class=" max-img">
+                <img src="img/sw3.jpg" class="max-img">
               </div>
               <span class="control-arrows left-arrow">left</span>
               <span class="control-arrows right-arrow">right</span>
             </div>
-          </div>
 
-          <div class="image-wrapper col-md-3">
-            <a href="#openModal4 " class="open-photo"><img src="img/sw4.jpg" class="min-img"></a>
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal4">
+              <img src="img/sw4.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
 
             <div id="openModal4" class="modalDialog">
               <div class="max-img-wrapper">
-                <img src="img/sw4.jpg" class=" max-img">
+                <img src="img/sw4.jpg" class="max-img">
               </div>
               <span class="control-arrows left-arrow">left</span>
               <span class="control-arrows right-arrow">right</span>
             </div>
+
           </div>
+          <!-- Одна картинка  -->
 
         </div>
+
+         <!-- Кнопка -->
+        <div class="row">
+          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
+            <div class="sim-button button29">
+              <span><a href="#">Подробнее</a></span>
+            </div>
+          </div>
+        </div>
+        <!-- Кнопка -->
       </div>
+      <!-- конец фотосессии -->
+
+      <!-- Одна фотосессия -->
+      <div class="photosession-preview-wrapper">
+        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
+        <p class="date-time">21.01.2017</p>
+        <div class="row">
+          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
+        </div>
+        <div class="row row-padding-0">
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal1">
+              <img src="img/sw1.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal1" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw1.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+           <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal2">
+              <img src="img/sw2.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal2" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw2.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal3">
+              <img src="img/sw3.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal3" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw3.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal4">
+              <img src="img/sw4.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal4" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw4.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+
+        </div>
+
+         <!-- Кнопка -->
+        <div class="row">
+          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
+            <div class="sim-button button29">
+              <span><a href="#">Подробнее</a></span>
+            </div>
+          </div>
+        </div>
+        <!-- Кнопка -->
+      </div>
+      <!-- конец фотосессии -->
+      <!-- Одна фотосессия -->
+      <div class="photosession-preview-wrapper">
+        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
+        <p class="date-time">21.01.2017</p>
+        <div class="row">
+          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
+        </div>
+        <div class="row row-padding-0">
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal1">
+              <img src="img/sw1.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal1" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw1.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+           <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal2">
+              <img src="img/sw2.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal2" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw2.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal3">
+              <img src="img/sw3.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal3" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw3.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal4">
+              <img src="img/sw4.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal4" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw4.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+
+        </div>
+
+         <!-- Кнопка -->
+        <div class="row">
+          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
+            <div class="sim-button button29">
+              <span><a href="#">Подробнее</a></span>
+            </div>
+          </div>
+        </div>
+        <!-- Кнопка -->
+      </div>
+      <!-- конец фотосессии -->
+      <!-- Одна фотосессия -->
+      <div class="photosession-preview-wrapper">
+        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
+        <p class="date-time">21.01.2017</p>
+        <div class="row">
+          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
+        </div>
+        <div class="row row-padding-0">
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal1">
+              <img src="img/sw1.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal1" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw1.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+           <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal2">
+              <img src="img/sw2.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal2" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw2.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal3">
+              <img src="img/sw3.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal3" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw3.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+          <!-- Одна картинка  -->
+          <div class="image-wrapper col-md-3" >
+
+            <div class="min-img-wrapper open-photo" data-target="openModal4">
+              <img src="img/sw4.jpg" class="min-img">
+              <div class="min-img-layout">
+                <div class="loop"></div>
+              </div>
+            </div>
+
+            <div id="openModal4" class="modalDialog">
+              <div class="max-img-wrapper">
+                <img src="img/sw4.jpg" class="max-img">
+              </div>
+              <span class="control-arrows left-arrow">left</span>
+              <span class="control-arrows right-arrow">right</span>
+            </div>
+
+          </div>
+          <!-- Одна картинка  -->
+
+        </div>
+
+         <!-- Кнопка -->
+        <div class="row">
+          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
+            <div class="sim-button button29">
+              <span><a href="#">Подробнее</a></span>
+            </div>
+          </div>
+        </div>
+        <!-- Кнопка -->
+      </div>
+      <!-- конец фотосессии -->
+
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <div class="pagination">
+            <a href="#">&laquo;</a>
+            <a href="#">1</a>
+            <a class="active" href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#">&raquo;</a>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
 
@@ -134,7 +505,7 @@
   					<span>Email<br>merenkovkonst@gmail.com</span>
   				</div>
   			</div>
-  			<div class="col-md-2 col-md-offset-4">
+  			<div class="col-md-2">
   				<h6>follow me</h6>
   				<div class="social">
   					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
