--- a/fotosessions.html
+++ b/fotosessions.html
@@ -27,7 +27,7 @@
   			</div>
   			<div class="col-md-9">
   				<ul id="navbar">
-  					<li><a href="#">главная</a></li>
+  					<li><a href="#">главная </a></li>
   					<li><a href="#">портфолио</a></li>
   					<li><a href="#">обо мне</a></li>
   					<li><a href="#">услуги</a></li>
@@ -66,8 +66,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw1.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -86,8 +86,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw2.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -106,8 +106,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw3.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -126,8 +126,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw4.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -169,8 +169,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw1.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -189,8 +189,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw2.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -209,8 +209,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw3.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -229,8 +229,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw4.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -271,8 +271,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw1.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -291,8 +291,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw2.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -311,8 +311,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw3.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -331,8 +331,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw4.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -373,8 +373,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw1.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -393,8 +393,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw2.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -413,8 +413,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw3.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
@@ -433,8 +433,8 @@
               <div class="max-img-wrapper">
                 <img src="img/sw4.jpg" class="max-img">
               </div>
-              <span class="control-arrows left-arrow">left</span>
-              <span class="control-arrows right-arrow">right</span>
+              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
             </div>
 
           </div>
