--- a/fotosessions.html
+++ b/fotosessions.html
@@ -21,9 +21,8 @@
   <body>
   <header>
   	<div class="container">
-  		<div class="row">
+  		<!-- <div class="row">
   			<div class="col-md-3" id="logo">
-  				<!-- <img src="img/logo.png"> -->
   			</div>
   			<div class="col-md-9">
   				<ul id="navbar">
@@ -36,7 +35,36 @@
   					<li><a href="#">FAQ</a></li>
 				</ul>
   			</div>	
-  		</div>
+  		</div> -->
+      <nav class="navbar navbar-default " role="navigation">
+        <div class="container-fluid">
+        <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png">
+        </a>
+        </div>
+         
+        <!-- <!—Само меню--> 
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav nav-wrapper">
+        <li class="active"><a href="#">Главная</a></li>
+        <li><a href="#">портфолио</a></li>
+        <li><a href="#">обо мне</a></li>
+        <li><a href="#">услуги</a></li>
+        <li><a href="#">контакты</a></li>
+        <li><a href="#">отзывы</a></li>
+        <li><a href="#">FAQ</a></li>
+        </ul>
+        </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+        </nav>
   		<h1 class="page_title">Фотосессии</h1>
   	</div>
   </header>
