adaptive menu + recreated footer

--- a/fotosessions.html
+++ b/fotosessions.html
@@ -545,7 +545,7 @@
   	</div>
 
   	<div id="m-team">
-  		<span>&copy 2017 designed and developed by <a href="">m-team</a> web-studio </span>
+  		<span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
   	</div>
   	
   </footer>
