--- a/fotosessions.html
+++ b/fotosessions.html
@@ -21,21 +21,6 @@
   <body>
   <header>
   	<div class="container">
-  		<!-- <div class="row">
-  			<div class="col-md-3" id="logo">
-  			</div>
-  			<div class="col-md-9">
-  				<ul id="navbar">
-  					<li><a href="#">главная </a></li>
-  					<li><a href="#">портфолио</a></li>
-  					<li><a href="#">обо мне</a></li>
-  					<li><a href="#">услуги</a></li>
-  					<li><a href="#">контакты</a></li>
-  					<li><a href="#">отзывы</a></li>
-  					<li><a href="#">FAQ</a></li>
-				</ul>
-  			</div>	
-  		</div> -->
       <nav class="navbar navbar-default " role="navigation">
         <div class="container-fluid">
         <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -54,13 +39,13 @@
         <!-- <!—Само меню--> 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav nav-wrapper">
-        <li class="active"><a href="#">Главная</a></li>
-        <li><a href="#">портфолио</a></li>
-        <li><a href="#">обо мне</a></li>
-        <li><a href="#">услуги</a></li>
-        <li><a href="#">контакты</a></li>
-        <li><a href="#">отзывы</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="#" class="menu-underline">Главная</a></li>
+        <li><a href="#" class="menu-underline">портфолио</a></li>
+        <li><a href="#" class="menu-underline">обо мне</a></li>
+        <li><a href="#" class="menu-underline">услуги</a></li>
+        <li><a href="#" class="menu-underline">контакты</a></li>
+        <li><a href="#" class="menu-underline">отзывы</a></li>
+        <li><a href="#" class="menu-underline">FAQ</a></li>
         </ul>
         </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -510,13 +495,13 @@
   			<div class="col-md-3">
   				<h6>меню</h6>
   				<ul id="footer_navbar">
-  					<li><a href="#">главная</a></li>
-  					<li><a href="#">портфолио</a></li>
-  					<li><a href="#">обо мне</a></li>
-  					<li><a href="#">услуги</a></li>
-  					<li><a href="#">контакты</a></li>
-  					<li><a href="#">отзывы</a></li>
-  					<li><a href="#">FAQ</a></li>	
+  					<li><a href="#" class="menu-underline">главная</a></li>
+  					<li><a href="#" class="menu-underline">портфолио</a></li>
+  					<li><a href="#" class="menu-underline">обо мне</a></li>
+  					<li><a href="#" class="menu-underline">услуги</a></li>
+  					<li><a href="#" class="menu-underline">контакты</a></li>
+  					<li><a href="#" class="menu-underline">отзывы</a></li>
+  					<li><a href="#" class="menu-underline">FAQ</a></li>	
   				</ul>
   			</div>
   			<div class="col-md-3">
