fixed and ready portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,6 @@
 		</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 		</nav>
-	  <h1 class="page_title">обо мне</h1>
 	</div>
   </header>
 
@@ -63,19 +62,19 @@
 
 
 	<div class="container">
-		<div class="row">
+		<div class="row portfolio-content-wrapper">
 			<div class="col-md-3 menubar">
 				<ul class="photo-category">
-				  <li data-filter="all">All</li>
-				  <li data-filter=".love-story">love-story</li>
-				  <li data-filter=".portrait">portrait</li>
-				  <li data-filter=".wedding">wedding</li>
-				  <li data-filter=".landscape">landscape</li>
-				  <li data-filter=".gift">gift</li>
+				  <li data-filter="all">Все фотографии</li>
+				  <li data-filter=".love-story">Love story</li>
+				  <li data-filter=".portrait">Портретная съемка</li>
+				  <li data-filter=".wedding">Фотосъемка беременных</li>
+				  <li data-filter=".landscape">Пейзажная фотосъемка</li>
+				  <li data-filter=".gift">Подарочный сертификат</li>
 				</ul>
-				<div class="wrapper-inner-tab-backgrounds-second">
+				<div class="wrapper-inner-tab-backgrounds-second col-md-offset-2 col-md-8">
             <div class="sim-button button29">
-              <span><a href="#">Заказать фотосессию</a></span>
+              <span><a href="#">Все фотосессии</a></span>
             </div>
         </div>
 			</div>
@@ -115,35 +114,6 @@
         </div>
       </div>
 	</div>
-
-
-
-
-
-<!-- 
-	  <div class="menubar">
-		  <ul class="number">
-			  <li data-filter="all">All</li>
-			  <li data-filter=".one">One</li>
-			  <li data-filter=".two">Two</li>
-			  <li data-filter=".three">Three</li>
-			  <li data-filter=".four">Four</li>
-			  <li data-filter=".five">Five</li>
-		  </ul>
-		  <ul class="colors">
-			  <li data-filter="all">All</li>
-			  <li data-filter=".blue">Blue</li>
-			  <li data-filter=".green">Green</li>
-		  </ul>
-	  </div> -->
-
-	  <!-- <div class="photo-wrapper row"> -->
-		  <!-- <div class="mix one col-md-3"><img src="img/sw1.jpg" alt=""> 1</div> -->
-		  <!-- <div class="mix two green col-md-3"><img src="img/sw2.jpg" alt=""> 2</div>
-		  <!-- <div class="mix three blue col-md-3"><img src="img/sw3.jpg" alt=""> 3</div> -->
-		  <!-- <div class="mix four green col-md-3"><img src="img/sw4.jpg" alt=""> 4</div> -->
-	  <!-- </div> --> -->
-
   </section>
 
   <footer>
