--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
             </div>
         </div>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-9 portfolio-gallery-wrapper">
 				<div class="photo-preview">
 					<div class="photo-mix">
 	            <a href="img/sw1.jpg" class="min-photo mix love-story col-md-4 "><img src="img/sw1.jpg" alt=""></a>
@@ -94,13 +94,8 @@
 	            <a href="img/sw2.jpg" class="min-photo mix portrait col-md-4"><img src="img/sw2.jpg" alt=""></a>
 	            <a href="img/sw3.jpg" class="min-photo mix wedding col-md-4"><img src="img/sw3.jpg" alt=""></a>
 					</div>
-          
         </div>
-			</div>
-		</div>
-
-		<div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="row">
           <div class="pagination">
             <a href="#">&laquo;</a>
             <a href="#">1</a>
@@ -112,7 +107,11 @@
             <a href="#">&raquo;</a>
           </div>
         </div>
-      </div>
+			</div>
+
+		</div>
+
+        
 	</div>
   </section>
 
