services-portfolio created

--- a/services-photo.html
+++ b/services-photo.html
@@ -56,7 +56,7 @@
 		</nav>
 		<ul class="breadcrumb">
 			<li>Услуги</li>
-			<li>Фотосессии</li>
+			<li class="active">Фотосессии</li>
 		</ul>
 	</div>
   </header>
@@ -64,19 +64,75 @@
 <section id="services-photo-page">
 	
 	<div class="container">	
-		<div class="service-wrapper">	
-				<h3>1 Пляж Баваро (также его называют Los Corales)</h3>
+		<div class="service-wrapper">
+				<div class="row service-title-wrapper">	
+						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
+				</div>	
 				<div class="row">	
 						<div class="col-md-6 service-photo-wrapper">
-								<img src="img/service-example.png" alt="">
-								<div class="col-md-10">
-									<ul>
-										<li>Стоимость</li>
-										<li>Продолжительность</li>
-										<li>1 образ</li>
-										<li>60-80 обработанных фото</li>
-										<li>5 фото детальная обработка PS</li>
-									</ul>
+								<img src="img/service-example.png" class="service-main-photo" alt="">
+								<div class="col-md-10 details-description">
+										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
+										<span class="service-photo-icon"><img src="img/clock-symbol.png" alt="">Продолжительность</span>
+										<span class="service-photo-icon"><img src="img/dress-symbol.png" alt="">1 образ</span>
+										<span class="service-photo-icon"><img src="img/image-gallery-symbol.png" alt="">60-80 обработанных фото</span>
+										<span class="service-photo-icon"><img src="img/ps-symbol.png" alt="">5 фото детальная обработка PS</span>
+								</div>
+						</div>
+						<div class="service-description-wrapper">
+							<p class="service-description">
+								Это единственная фотосессия, в стоимость которой не входит трансфер, поэтому она подходит для отелей, находящихся в пешей доступности от пляжа (NOW Larimar, Whala Bavaro, Paradisus Palma Real, Melia, IFA Villas Bavaro, Vista Sol, Gran Palladium, Paradisus Punta Cana, Occidental Grand). Для других отелей требуется трансфер (40-80$ в зависимости от удаленности)...
+							</p>
+							<div class="wrapper-inner-tab-backgrounds-second col-md-offset-2 col-md-8">
+		            		<div class="sim-button button29">
+		              		<span><a href="#">Детальнее</a></span>
+		            		</div>
+        				</div>
+						</div>
+				</div>
+		</div>
+
+		<div class="service-wrapper">
+				<div class="row service-title-wrapper">	
+						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
+				</div>	
+				<div class="row">	
+						<div class="col-md-6 service-photo-wrapper">
+								<img src="img/service-example.png" class="service-main-photo" alt="">
+								<div class="col-md-10 details-description">
+										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
+										<span class="service-photo-icon"><img src="img/clock-symbol.png" alt="">Продолжительность</span>
+										<span class="service-photo-icon"><img src="img/dress-symbol.png" alt="">1 образ</span>
+										<span class="service-photo-icon"><img src="img/image-gallery-symbol.png" alt="">60-80 обработанных фото</span>
+										<span class="service-photo-icon"><img src="img/ps-symbol.png" alt="">5 фото детальная обработка PS</span>
+								</div>
+						</div>
+						<div class="service-description-wrapper">
+							<p class="service-description">
+								Это единственная фотосессия, в стоимость которой не входит трансфер, поэтому она подходит для отелей, находящихся в пешей доступности от пляжа (NOW Larimar, Whala Bavaro, Paradisus Palma Real, Melia, IFA Villas Bavaro, Vista Sol, Gran Palladium, Paradisus Punta Cana, Occidental Grand). Для других отелей требуется трансфер (40-80$ в зависимости от удаленности)...
+							</p>
+							<div class="wrapper-inner-tab-backgrounds-second col-md-offset-2 col-md-8">
+		            		<div class="sim-button button29">
+		              		<span><a href="#">Детальнее</a></span>
+		            		</div>
+        				</div>
+						</div>
+				</div>
+		</div>
+
+		<div class="service-wrapper">
+				<div class="row service-title-wrapper">	
+						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
+				</div>	
+				<div class="row">	
+						<div class="col-md-6 service-photo-wrapper">
+								<img src="img/service-example.png" class="service-main-photo" alt="">
+								<div class="col-md-10 details-description">
+										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
+										<span class="service-photo-icon"><img src="img/clock-symbol.png" alt="">Продолжительность</span>
+										<span class="service-photo-icon"><img src="img/dress-symbol.png" alt="">1 образ</span>
+										<span class="service-photo-icon"><img src="img/image-gallery-symbol.png" alt="">60-80 обработанных фото</span>
+										<span class="service-photo-icon"><img src="img/ps-symbol.png" alt="">5 фото детальная обработка PS</span>
 								</div>
 						</div>
 						<div class="service-description-wrapper">
