main-service-page

--- a/services-inside.html
+++ b/services-inside.html
@@ -118,7 +118,7 @@
 								<span class="service-photo-icon"><img src="img/ps-symbol.png" alt="">5 фото детальная обработка PS</span>
 						</div>
 				</div>
-				<div class="additional-services col-md-4">
+				<div class="additional-services col-md-4 col-xs-12">
 					<h4>Дополнительные услуги</h4>
 					<div class="additional-services-form">
 						<input type="checkbox" data-price="100" class="checkbox" id="checkbox1">
@@ -179,11 +179,6 @@
 			</div>
 			<div class="col-md-3">
 				<h6>контакты</h6>
-				<!-- <ul id="footer_contacts">
-					<li>WhatsApp<br>+380669709791</li>
-					<li>Skype<br>lesya.vasilenko_</li>
-					<li>Email<br>merenkovkonst@gmail.com</li>
-				</ul> -->
 				<div id="footer_contacts">
 					<span>Телефон<br>+380669709791</span>
 					<span>WhatsApp<br>+380669709791</span>
