before final reediting

--- a/services-inside.html
+++ b/services-inside.html
@@ -95,7 +95,7 @@
 				Фотосессию на этой локации предпочтительно проводить ранним утром на рассвете. Во-первых, это невероятно красиво и фотографии получаются очень романтическими, во-вторых в это время на пляже меньше всего посторонних людей.
 	 		</p>
 	 			<div class="carousel-wrapper">
-		 			<div class="owl-carousel">
+		 			<div class="owl-carousel carousel_1">
 		 				<!-- <div class="slide-wrapper"><img src="img/slide1.png" alt=""></div>
 		 				<div class="slide-wrapper"><img src="img/slide2.png" alt=""></div>
 		 				<div class="slide-wrapper"><img src="img/slide3.png" alt=""></div> -->
