--- a/index.html
+++ b/index.html
@@ -1,51 +1,263 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>modal</title>
+<html lang="en">
+  <head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+	<!-- animate -->
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
+
+	<!-- magnific -->
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
+	<!-- owl-carousel -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
+	<link rel="stylesheet" type="text/css" href="css/owl.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<div class="gallery">
-		<div class="image-wrapper">
-			<a href="#openModal1" class="open-photo"><img src="img/sw1.jpg" class="min-img"></a>
-			<div id="openModal1" class="modalDialog">
-				<div class="max-img-wrapper">
-					<img src="img/sw1.jpg" class="max-img">
+	<!-- WOW js -->
+	<script src="js/wow.min.js" type="text/javascript"></script>
+	<script>
+ 		new WOW().init();
+	</script>
+
+  </head>
+  <body>
+  <div class="body-wrapper">
+  <header id="main-page-header">
+	  <nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
+		<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		<span class="sr-only">Toggle navigation</span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		</button>
+		
+		</div>
+		 
+		<!-- <!—Само меню--> 
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav nav-wrapper">
+		<li><a href="#" class="menu-underline">Главная</a></li>
+		<li><a href="#" class="menu-underline">портфолио</a></li>
+		<li><a href="#" class="menu-underline">обо мне</a></li>
+		<li><a href="#" class="menu-underline">услуги</a></li>
+		<li><a href="#" class="menu-underline">контакты</a></li>
+		<li><a href="#" class="menu-underline">отзывы</a></li>
+		<li><a href="#" class="menu-underline">FAQ</a></li>
+		</ul>
+		</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+		</nav>
+
+		<div class="main-photo"></div>
+		<div class="logo-container ">
+			<div class="half-border-top"></div>
+			<img src="img/logo.png" alt="" class="wow fadeInRight">
+		</div>
+		
+  </header>
+
+<section id="main-page-services">
+	<div class="row">
+		<div class="col-md-8 main-service-first wow fadeInLeft">
+			
+		</div>
+		<div class="col-md-4 main-service-description wow slideInDown">
+			<div class="main-service-description-wrapper">
+				<h3>Свадебные церемонии</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				<div class="services-button-wrapper">
+					<div class="wrapper-inner-tab-backgrounds-second">
+			            <div class="sim-button button29">
+			              	<span><a href="#" class="order-form-open">Узнать больше</a></span>
+			            </div>
+	        		</div>
 				</div>
-				<span class="control-arrows left-arrow">left</span>
-				<span class="control-arrows right-arrow">right</span>
-
 			</div>
 		</div>
-
-		<div class="image-wrapper">
-			<a href="#openModal2" class="open-photo"><img src="img/sw2.jpg" class="min-img"></a>
-
-			<div id="openModal2" class="modalDialog">
-					<div class="max-img-wrapper">
-					<img src="img/sw2.jpg" class=" max-img">
+	</div>
+	<div class="row">
+		<div class="col-md-4 main-service-description wow fadeInLeft">
+			<div class="main-service-description-wrapper">
+				<h3>фотосессии</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				<div class="services-button-wrapper">
+					<div class="wrapper-inner-tab-backgrounds-second">
+			            <div class="sim-button button29">
+			              	<span><a href="#" class="order-form-open">Узнать больше</a></span>
+			            </div>
+	        		</div>
 				</div>
-				<span class="control-arrows left-arrow">left</span>
-				<span class="control-arrows right-arrow">right</span>
 			</div>
 		</div>
+		<div class="col-md-8 main-service-second wow fadeInRight">
+			
+		</div>
+	</div>
+</section>
 
-		<div class="image-wrapper">
-			<a href="#openModal3 " class="open-photo"><img src="img/sw3.jpg" class="min-img"></a>
+<section id="main-page-porfolio">
+	<div class="row">
+		<div class="col-md-12 portfolio-gallery-wrapper">
+				<div class="photo-preview">
+					<div class="photo-mix">
+			            <a href="img/sw1.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            	<div class="services-button-wrapper col-md-4">
+								<div class="wrapper-inner-tab-backgrounds-second">
+						            <div class="sim-button button29">
+						              	<span><a href="#">все фотографии</a></span>
+						            </div>
+				        		</div>
+							</div>
+					</div>
+        </div>
+	</div>
+</section>
 
-			<div id="openModal3" class="modalDialog">
-				<div class="max-img-wrapper">
-					<img src="img/sw3.jpg" class=" max-img">
+<section id="main-page-numbers">
+	<div class="row">	
+		<div class="col-md-4 big-number-wrapper"><h3 class="big-number spincrement wow">55</h3><p class="number-description">Свадебных съемок</p> </div>
+		<div class="col-md-4 big-number-wrapper"><h3 class="big-number spincrement wow">105</h3><p class="number-description">Фотосессий</p> </div>
+		<div class="col-md-4 big-number-wrapper"><h3 class="big-number spincrement wow">260</h3><p class="number-description">Довольных клиентов</p> </div>
+	</div>
+</section>
+
+<section id="main-page-about">
+	<div class="main-page-about-wrapper">	
+		<div class="lera-photo wow slideInLeft" style="background: url('img/lera_photo_wide.png') center center / cover;">
+		</div>
+		<div class="about-description-wrapper wow slideInRight">
+			<p class="about-description pull-right">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+			</p>
+		</div>
+	</div>
+</section>
+
+<section id="main-page-reviews">
+		<div class="owl-carousel carousel_2">
+				<div class="row slide-wrapper">
+					<div class="col-md-2 col-md-offset-1"><img src="img/review-avatar.png" alt=""></div>
+					<div class="col-md-8">
+						<div class="row">
+							<div class="col-md-1">
+							<span class="quotes pull-left">"</span>
+							</div>
+							<div class="col-md-8 slide-review">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+							</div>
+							<div class="col-md-1">
+							<span class="quotes pull-left">"</span>
+							</div>
+						</div>
+					</div>
+			</div>
+				<div class="row slide-wrapper">
+					<div class="col-md-2 col-md-offset-1"><img src="img/review-avatar.png" alt=""></div>
+					<div class="col-md-8">
+						<div class="row">
+							<div class="col-md-1">
+							<span class="quotes pull-left">"</span>
+							</div>
+							<div class="col-md-8 slide-review">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+							</div>
+							<div class="col-md-1">
+							<span class="quotes pull-left">"</span>
+							</div>
+						</div>
+					</div>
+			</div>
+			
+
+
+		</div>
+</section>
+
+
+
+
+
+
+
+
+    <footer>
+	<div class="container">
+		<div class="row">
+			<div id="logo" class="col-md-4">
+			</div>
+			<div class="col-md-3">
+				<h6>меню</h6>
+				<ul id="footer_navbar">
+					<li><a href="#" class="menu-underline">главная</a></li>
+					<li><a href="#" class="menu-underline">портфолио</a></li>
+					<li><a href="#" class="menu-underline">обо мне</a></li>
+					<li><a href="#" class="menu-underline">услуги</a></li>
+					<li><a href="#" class="menu-underline">контакты</a></li>
+					<li><a href="#" class="menu-underline">отзывы</a></li>
+					<li><a href="#" class="menu-underline">FAQ</a></li> 
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<h6>контакты</h6>
+				<ul id="footer_contacts">
+					<li>WhatsApp<br>+380669709791</li>
+					<li>Skype<br>lesya.vasilenko_</li>
+					<li>Email<br>merenkovkonst@gmail.com</li>
+				</ul>
+				<div id="footer_contacts">
+					<span>Телефон<br>+380669709791</span>
+					<span>WhatsApp<br>+380669709791</span>
+					<span>Skype<br>lesya.vasilenko_</span>
+					<span>Email<br>merenkovkonst@gmail.com</span>
 				</div>
-				<span class="control-arrows left-arrow">left</span>
-				<span class="control-arrows right-arrow">right</span>
+			</div>
+			<div class="col-md-2">
+				<h6>follow me</h6>
+				<div class="social">
+					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+				</div>
 			</div>
 		</div>
 	</div>
 
+	<div id="m-team">
+		<span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
+	</div>
+  
+  </footer>
+
+</div>
+
+	<!-- jQuery first, then Tether, then Bootstrap JS. -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+	<script src="js/jquery.spincrement.js"></script>
+	<script src="js/mixitup.min.js" type="text/javascript"></script>
+	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-</body>
+  </body>
 </html>
