reviews+contacts adaptive

--- a/photosessions-inside.html
+++ b/photosessions-inside.html
@@ -72,41 +72,48 @@
 	 		</p>
 	 		<div class="row row-padding-0">
         		<div class="photo-preview">
-          			<div class="row photo-preview-wrapper">
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            			<a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            			<a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            			<a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            			<a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+          			<div class="photo-mix">
+            			<a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            
+
           			</div>          
         		</div>
 	 		</div>
 	 </div>
 </section>
 
+ 
   <footer>
 	<div class="container">
 		<div class="row">
@@ -159,6 +166,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
 	<script src="js/mixitup.min.js" type="text/javascript"></script>
+	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
