--- a/portfolio.html
+++ b/portfolio.html
@@ -79,22 +79,16 @@
         </div>
 			</div>
 			<div class="col-md-9 portfolio-gallery-wrapper">
-				<div class="photo-preview">
-					<div class="photo-mix">
-	            <a href="img/sw1.jpg" class="min-photo mix love-story col-md-4 "><img src="img/sw1.jpg" alt=""></a>
-	            <a href="img/sw2.jpg" class="min-photo mix portrait col-md-4"><img src="img/sw2.jpg" alt=""></a>
-	            <a href="img/sw3.jpg" class="min-photo mix wedding col-md-4"><img src="img/sw3.jpg" alt=""></a>
-	            <a href="img/sw1.jpg" class="min-photo mix love-story col-md-4 "><img src="img/sw1.jpg" alt=""></a>
-	            <a href="img/sw2.jpg" class="min-photo mix portrait col-md-4"><img src="img/sw2.jpg" alt=""></a>
-	            <a href="img/sw3.jpg" class="min-photo mix wedding col-md-4"><img src="img/sw3.jpg" alt=""></a>
-	            <a href="img/sw1.jpg" class="min-photo mix love-story col-md-4 "><img src="img/sw1.jpg" alt=""></a>
-	            <a href="img/sw2.jpg" class="min-photo mix portrait col-md-4"><img src="img/sw2.jpg" alt=""></a>
-	            <a href="img/sw3.jpg" class="min-photo mix wedding col-md-4"><img src="img/sw3.jpg" alt=""></a>
-	            <a href="img/sw1.jpg" class="min-photo mix love-story col-md-4 "><img src="img/sw1.jpg" alt=""></a>
-	            <a href="img/sw2.jpg" class="min-photo mix portrait col-md-4"><img src="img/sw2.jpg" alt=""></a>
-	            <a href="img/sw3.jpg" class="min-photo mix wedding col-md-4"><img src="img/sw3.jpg" alt=""></a>
-					</div>
-        </div>
+				<div class="row row-padding-0">
+        			<div class="photo-preview">
+          				<div class="photo-mix">
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix portrait"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix portrait"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            			</div>
+        			</div>
+   		 		</div>
+
         <div class="row">
           <div class="pagination">
             <a href="#">&laquo;</a>
@@ -134,11 +128,6 @@
 			</div>
 			<div class="col-md-3">
 				<h6>контакты</h6>
-				<!-- <ul id="footer_contacts">
-					<li>WhatsApp<br>+380669709791</li>
-					<li>Skype<br>lesya.vasilenko_</li>
-					<li>Email<br>merenkovkonst@gmail.com</li>
-				</ul> -->
 				<div id="footer_contacts">
 					<span>Телефон<br>+380669709791</span>
 					<span>WhatsApp<br>+380669709791</span>
@@ -172,6 +161,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
 	<script src="js/mixitup.min.js" type="text/javascript"></script>
+	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
