--- a/reviews.html
+++ b/reviews.html
@@ -20,6 +20,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive -->
+	<link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
@@ -61,7 +64,7 @@
 <section id="reviews-page">
 	<div class="container">	
 		<div class="row left-review one-review">
-			<div class="col-md-7">
+			<div class="col-md-7 col-sm-12">
 				<div class="quotes">"</div>
 				<div class="review-body">
 					<h3 class="reviews-title">Александра и Артур<br>Остров Саона, Июль 2017</h3>
@@ -72,15 +75,12 @@
 				</div>
 				<div class="quotes pull-right">"</div>
 			</div>
-			<div class="col-md-5">
+			<div class="col-md-5 col-sm-12 review-photo-wrapper">
 				<img src="img/photo-review.png" alt="" class="review-photo">
 			</div>
 		</div>
 		<div class="row right-review one-review">
-			<div class="col-md-5">
-				<img src="img/photo-review.png" alt="" class="review-photo">
-			</div>
-			<div class="col-md-7">
+			<div class="col-md-7 col-sm-12 col-md-push-5">
 				<div class="quotes">"</div>
 				<div class="review-body">
 					<h3 class="reviews-title">Александра и Артур<br>Остров Саона, Июль 2017</h3>
@@ -91,6 +91,10 @@
 				</div>
 				<div class="quotes pull-right">"</div>
 			</div>
+			<div class="col-md-5 col-sm-12 col-md-pull-7 review-photo-wrapper">
+				<img src="img/photo-review.png" alt="" class="review-photo">
+			</div>
+			
 		</div>
 		<div class="row pagination-wrapper">
           <div class="pagination">
