--- a/contacts.html
+++ b/contacts.html
@@ -20,6 +20,9 @@
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- adaptive css -->
+    <link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <header>
@@ -98,9 +101,9 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div id="logo" class="col-md-4">
-        </div>
-        <div class="col-md-3">
+        <!-- <div id="logo" class="col-md-4 col-xs-4"> -->
+        <!-- </div> -->
+        <div class="col-md-3 col-xs-4 footer-nav-wrapper">
           <h6>меню</h6>
           <ul id="footer_navbar">
             <li><a href="#" class="menu-underline">главная</a></li>
@@ -112,7 +115,7 @@
             <li><a href="#" class="menu-underline">FAQ</a></li> 
           </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-4">
           <h6>контакты</h6>
           <!-- <ul id="footer_contacts">
             <li>WhatsApp<br>+380669709791</li>
@@ -126,7 +129,7 @@
             <span>Email<br>merenkovkonst@gmail.com</span>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-xs-4">
           <h6>follow me</h6>
           <div class="social">
             <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
