--- a/faq.html
+++ b/faq.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- custom css -->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+  <!-- animate -->
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+
+  <!-- magnific -->
+  <link rel="stylesheet" href="css/magnific-popup.css">
+
+  <!-- owl-carousel -->
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+  <!-- custom css -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/owl.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
+  <div class="body-wrapper">
   <header>
-  	<div class="container">
-  		<div class="row">
-  			<div class="col-md-3" id="logo">
-  				<!-- <img src="img/logo.png"> -->
-  			</div>
-  			<div class="col-md-9">
-  				<ul id="navbar">
-  					<li><a href="#">главная</a></li>
-  					<li><a href="#">портфолио</a></li>
-  					<li><a href="#">обо мне</a></li>
-  					<li><a href="#">услуги</a></li>
-  					<li><a href="#">контакты</a></li>
-  					<li><a href="#">отзывы</a></li>
-  					<li><a href="#">FAQ</a></li>
-				</ul>
-  			</div>	
-  		</div>
-  		<h1 class="page_title">Часто задаваемые вопросы</h1>
-  	</div>
+  <div class="container">
+    <nav class="navbar navbar-default " role="navigation">
+    <div class="container-fluid">
+    <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
+    <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">
+      <img src="img/logo.png">
+    </a>
+    </div>
+     
+    <!-- <!—Само меню--> 
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav nav-wrapper">
+    <li><a href="#" class="menu-underline">Главная</a></li>
+    <li><a href="#" class="menu-underline">портфолио</a></li>
+    <li><a href="#" class="menu-underline">обо мне</a></li>
+    <li><a href="#" class="menu-underline">услуги</a></li>
+    <li><a href="#" class="menu-underline">контакты</a></li>
+    <li><a href="#" class="menu-underline">отзывы</a></li>
+    <li><a href="#" class="menu-underline">FAQ</a></li>
+    </ul>
+    </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+    </nav>
+    <h1 class="page_title">Часто задаваемые вопросы</h1>
+  </div>
   </header>
 
 <section id="faq_content">
@@ -55,60 +83,58 @@
 
 
   <footer>
-  	<div class="container">
-  		<div class="row">
-  			<div id="logo" class="col-md-4">
-  			</div>
-  			<div class="col-md-3">
-  				<h6>меню</h6>
-  				<ul id="footer_navbar">
-  					<li><a href="#">главная</a></li>
-  					<li><a href="#">портфолио</a></li>
-  					<li><a href="#">обо мне</a></li>
-  					<li><a href="#">услуги</a></li>
-  					<li><a href="#">контакты</a></li>
-  					<li><a href="#">отзывы</a></li>
-  					<li><a href="#">FAQ</a></li>	
-  				</ul>
-  			</div>
-  			<div class="col-md-3">
-  				<h6>контакты</h6>
-  				<!-- <ul id="footer_contacts">
-  					<li>WhatsApp<br>+380669709791</li>
-  					<li>Skype<br>lesya.vasilenko_</li>
-  					<li>Email<br>merenkovkonst@gmail.com</li>
-  				</ul> -->
-  				<div id="footer_contacts">
-  					<span>Телефон<br>+380669709791</span>
-  					<span>WhatsApp<br>+380669709791</span>
-  					<span>Skype<br>lesya.vasilenko_</span>
-  					<span>Email<br>merenkovkonst@gmail.com</span>
-  				</div>
-  			</div>
-  			<div class="col-md-2 col-md-offset-4">
-  				<h6>follow me</h6>
-  				<div class="social">
-  					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-  					<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
-  					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-  				</div>
-  			</div>
-  		</div>
-  	</div>
+  <div class="container">
+    <div class="row">
+      <div id="logo" class="col-md-4">
+      </div>
+      <div class="col-md-3">
+        <h6>меню</h6>
+        <ul id="footer_navbar">
+          <li><a href="#" class="menu-underline">главная</a></li>
+          <li><a href="#" class="menu-underline">портфолио</a></li>
+          <li><a href="#" class="menu-underline">обо мне</a></li>
+          <li><a href="#" class="menu-underline">услуги</a></li>
+          <li><a href="#" class="menu-underline">контакты</a></li>
+          <li><a href="#" class="menu-underline">отзывы</a></li>
+          <li><a href="#" class="menu-underline">FAQ</a></li> 
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h6>контакты</h6>
+        <div id="footer_contacts">
+          <span>Телефон<br>+380669709791</span>
+          <span>WhatsApp<br>+380669709791</span>
+          <span>Skype<br>lesya.vasilenko_</span>
+          <span>Email<br>merenkovkonst@gmail.com</span>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <h6>follow me</h6>
+        <div class="social">
+          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  	<div id="m-team">
-  		<span>&copy 2017 designed and developed by <a href="">m-team</a> web-studio </span>
-  	</div>
-  	
+  <div id="m-team">
+    <span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
+  </div>
+  
   </footer>
 
 
+</div>
 
-
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+  <script src="js/mixitup.min.js" type="text/javascript"></script>
+  <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
