--- a/fotosessions.html
+++ b/fotosessions.html
@@ -69,11 +69,11 @@
         </div>
         <div class="row row-padding-0">
         <div class="photo-preview">
-          <div class="row photo-preview-wrapper">
-            <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-            <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-            <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-            <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+          <div class="photo-mix">
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
           </div>          
         </div>
 
@@ -92,35 +92,7 @@
       <!-- конец фотосессии -->
 
       <!-- Одна фотосессия -->
-      <div class="photosession-preview-wrapper">
-        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
-        <p class="date-time">21.01.2017</p>
-        <div class="row">
-          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
-        </div>
-        <div class="row row-padding-0">
-          <div class="photo-preview">
-            <div class="row photo-preview-wrapper">
-              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            </div>          
-          </div>
 
-        </div>
-
-         <!-- Кнопка -->
-        <div class="row">
-          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
-            <div class="sim-button button29">
-              <span><a href="#">Подробнее</a></span>
-            </div>
-          </div>
-        </div>
-        <!-- Кнопка -->
-      </div>
-      <!-- конец фотосессии -->
       <!-- Одна фотосессия -->
       <div class="photosession-preview-wrapper">
         <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
@@ -129,14 +101,14 @@
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
-          <div class="photo-preview">
-            <div class="row photo-preview-wrapper">
-              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            </div>          
-          </div>
+        <div class="photo-preview">
+          <div class="photo-mix">
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+          </div>          
+        </div>
 
         </div>
 
@@ -151,37 +123,9 @@
         <!-- Кнопка -->
       </div>
       <!-- конец фотосессии -->
+
       <!-- Одна фотосессия -->
-      <div class="photosession-preview-wrapper">
-        <h3><a href="#" class="underline-link">Оксана и Андрей</a></h3>
-        <p class="date-time">21.01.2017</p>
-        <div class="row">
-          <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
-        </div>
-        <div class="row row-padding-0">
-          <div class="photo-preview">
-            <div class="row photo-preview-wrapper">
-              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
-              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
-              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
-              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
-            </div>          
-          </div>
-
-        </div>
-
-         <!-- Кнопка -->
-        <div class="row">
-          <div class="wrapper-inner-tab-backgrounds-second col-md-2">
-            <div class="sim-button button29">
-              <span><a href="#">Подробнее</a></span>
-            </div>
-          </div>
-        </div>
-        <!-- Кнопка -->
-      </div>
-      <!-- конец фотосессии -->
-
+      
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <div class="pagination">
@@ -202,62 +146,59 @@
   </section>
 
 
-  <footer>
-  	<div class="container">
-  		<div class="row">
-  			<div id="logo" class="col-md-4">
-  			</div>
-  			<div class="col-md-3">
-  				<h6>меню</h6>
-  				<ul id="footer_navbar">
-  					<li><a href="#" class="menu-underline">главная</a></li>
-  					<li><a href="#" class="menu-underline">портфолио</a></li>
-  					<li><a href="#" class="menu-underline">обо мне</a></li>
-  					<li><a href="#" class="menu-underline">услуги</a></li>
-  					<li><a href="#" class="menu-underline">контакты</a></li>
-  					<li><a href="#" class="menu-underline">отзывы</a></li>
-  					<li><a href="#" class="menu-underline">FAQ</a></li>	
-  				</ul>
-  			</div>
-  			<div class="col-md-3">
-  				<h6>контакты</h6>
-  				<!-- <ul id="footer_contacts">
-  					<li>WhatsApp<br>+380669709791</li>
-  					<li>Skype<br>lesya.vasilenko_</li>
-  					<li>Email<br>merenkovkonst@gmail.com</li>
-  				</ul> -->
-  				<div id="footer_contacts">
-  					<span>Телефон<br>+380669709791</span>
-  					<span>WhatsApp<br>+380669709791</span>
-  					<span>Skype<br>lesya.vasilenko_</span>
-  					<span>Email<br>merenkovkonst@gmail.com</span>
-  				</div>
-  			</div>
-  			<div class="col-md-2">
-  				<h6>follow me</h6>
-  				<div class="social">
-  					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-  					<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
-  					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-  				</div>
-  			</div>
-  		</div>
-  	</div>
+   <footer>
+  <div class="container">
+    <div class="row">
+      <div id="logo" class="col-md-4">
+      </div>
+      <div class="col-md-3">
+        <h6>меню</h6>
+        <ul id="footer_navbar">
+          <li><a href="#" class="menu-underline">главная</a></li>
+          <li><a href="#" class="menu-underline">портфолио</a></li>
+          <li><a href="#" class="menu-underline">обо мне</a></li>
+          <li><a href="#" class="menu-underline">услуги</a></li>
+          <li><a href="#" class="menu-underline">контакты</a></li>
+          <li><a href="#" class="menu-underline">отзывы</a></li>
+          <li><a href="#" class="menu-underline">FAQ</a></li> 
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h6>контакты</h6>
+        <div id="footer_contacts">
+          <span>Телефон<br>+380669709791</span>
+          <span>WhatsApp<br>+380669709791</span>
+          <span>Skype<br>lesya.vasilenko_</span>
+          <span>Email<br>merenkovkonst@gmail.com</span>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <h6>follow me</h6>
+        <div class="social">
+          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  	<div id="m-team">
-  		<span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
-  	</div>
+  <div id="m-team">
+    <span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
+  </div>
   
   </footer>
 
 
+</div>
 
-
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+  <script src="js/mixitup.min.js" type="text/javascript"></script>
+  <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
